--- a/app/globals.css
+++ b/app/globals.css
@@ -127,3 +127,43 @@
       transform: translateY(calc(-100% - var(--gap)));
     }
   }
+
+  /* Swiper styles */
+
+  .swiper {
+    width: 280px;
+    height: 400px;
+  }
+
+  @media (min-width: 640px) {
+    /* at sm and up */
+    .swiper {
+      width: 400px;
+    }
+  }
+
+  @media (min-width: 768px) {
+    /* at sm and up */
+    .swiper {
+      width: 300px;
+    }
+  }
+  
+  @media (min-width: 1150px) {
+    /* at lg and up */
+    .swiper {
+      width: 500px;
+    }
+  }
+  
+  .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 18px;
+    font-size: 22px;
+    font-weight: bold;
+    color: #fff;
+  }
+  
+  
